# sql-lsp

./: .envrc  .gitignore  .poetry.lock.sha512  README.md  eglot.patch  flake.nix  lsp-sql-ls.el  notes.org  pyproject.toml  test.sql
.direnv/: flake-profile  flake-profile-5-link
sql_lsp/: __main__.py  cli.py  completion.py  config.py  database.py  mysql_connector.py  server.py  utils.py
