[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sql-ls = "sql_lsp.__main__:main"

[tool.poetry]
name = "sql-lsp"
version = "0.0.4"
description = ""
authors = ["Chahak Mehta <chahakmehta013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygls = "^1.1.1"
mysql-connector = "^8.2.0"
sqlfluff = "^2.3.5"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.1"

[tool.basedpyright]
reportUnusedCallResult = false
