[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sql-ls = "sql_lsp.cli:main"

[tool.poetry]
name = "sql-lsp"
version = "0.0.7"
description = ""
authors = ["Chahak Mehta <chahakmehta013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygls = "^1.1.1"
mysql-connector-python = "^8.2.0"
sqlfluff = "^2.3.5"
tabulate = "^0.9.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.1"

[tool.basedpyright]
reportUnusedCallResult = false
